--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -473,7 +473,7 @@ Data analysis is the same as study 3a.
 \caption{\label{fig:ex3b-dprime-rt}RT and \emph{d} prime of Experiment 3b.}
 \end{figure}
 
-Figure \ref{fig:ex3b-dprime-rt} shows \emph{d} prime and reaction times of experiment 3a. Less than 5\% correct trials with less than 200ms reaction times were exlucded.
+Figure \ref{fig:ex3b-dprime-rt} shows \emph{d} prime and reaction times of experiment 3b. Less than 5\% correct trials with less than 200ms reaction times were exlucded.
 
 \hypertarget{d-prime-3}{%
 \subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-3}}
@@ -498,7 +498,7 @@ For the mismacthed trials, we also found interaction between of valence and iden
 \hypertarget{discussion-3}{%
 \subsection{Discussion}\label{discussion-3}}
 
-In experiment 3b, we separated the self-referential and other-referential tasks into different blocks so that participants had lower cognitive load when finish the task. We replicated the pattern from experiment 3a that the valence effect is stronger when the stimuli were self-referential. Contrast to experiment 3a, however, we found that the self-referential condition is out-performed by other-referential conditions. This pattern suggest that the self-referential enhanced the valence effect, and the advantage to self is relative instead of absolute.
+In experiment 3b, we separated the self-referential and other-referential tasks into different blocks so that participants had lower cognitive load when finish the task. We replicated the pattern from experiment 3a that the valence effect is stronger when the stimuli were self-referential. Contrast to experiment 3a, however, we found that the self-referential condition is out-performed by other-referential conditions. This pattern suggest that the self-referential enhanced the valence effect, and the advantage to self might be relative instead of absolute.
 
 \hypertarget{experiment-4a}{%
 \section{Experiment 4a}\label{experiment-4a}}
@@ -537,50 +537,25 @@ The data were analyzed in the same way as in experiment 3a and 3b.
 \hypertarget{results-6}{%
 \subsection{Results}\label{results-6}}
 
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex4a-dprime-rt-1.pdf}
+\caption{\label{fig:ex4a-dprime-rt}RT and \emph{d} prime of Experiment 4a.}
+\end{figure}
+
+Figure \ref{fig:ex4a-dprime-rt} shows \emph{d} prime and reaction times of experiment 4a.
+
 \hypertarget{d-prime.-1}{%
 \subsubsection{\texorpdfstring{\emph{d} prime.}{d prime.}}\label{d-prime.-1}}
 
-We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measures ANOVA.
-
-The effect of identity (\(F(1, 58) = 121.04\), \(\mathit{MSE} = 0.48\), \(p < .001\), \(\hat{\eta}^2_G = .189\)), also the interaction between identity and valence, (\(F(2, 116) = 4.12\), \(\mathit{MSE} = 0.14\), \(p = .019\), \(\hat{\eta}^2_G = .004\)). But not the effect of valence was not found, \(F(2, 116) = 0.53\), \(\mathit{MSE} = 0.11\), \(p = .587\), \(\hat{\eta}^2_G = .000\).
-
-We further examined the effect of valence for both self and other.
+We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measures ANOVA. The effect of identity (\(F(1, 58) = 121.04\), \(\mathit{MSE} = 0.48\), \(p < .001\), \(\hat{\eta}^2_G = .189\)), also the interaction between identity and valence, (\(F(2, 116) = 4.12\), \(\mathit{MSE} = 0.14\), \(p = .019\), \(\hat{\eta}^2_G = .004\)). But not the effect of valence was not found, \(F(2, 116) = 0.53\), \(\mathit{MSE} = 0.11\), \(p = .587\), \(\hat{\eta}^2_G = .000\). We further examined the effect of valence for both self and other. For the self-referential trials, there was a weak effect of valence \(F(2, 116) = 3.01\), \(\mathit{MSE} = 0.15\), \(p = .053\), \(\hat{\eta}^2_G = .008\). Post-hoc analysis showed that good self condition (2.55 \(\pm\) 0.111) is slightly higher than bad self condition (2.38 \(\pm\) 0.105) , \emph{t}(58) = 2.339, \emph{p} = .0583. But there was no differences between good-self and neutral self (2.45 \(\pm\) 0.101), \emph{t}(58) = 1.575, \emph{p} = .264, neither between neutral-self and bad-self, \emph{t}(58) = 0.966, \emph{p} = .601. As for the other-referential conditions, the result didn't show effect of valence \(F(2, 116) = 1.75\), \(\mathit{MSE} = 0.10\), \(p = .178\), \(\hat{\eta}^2_G = .003\).
 
 \hypertarget{reaction-times.}{%
 \subsubsection{Reaction times.}\label{reaction-times.}}
 
-We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
+We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. There was a main effect of Matchness (\(F(1, 58) = 79.85\), \(\mathit{MSE} = 4,817.48\), \(p < .001\), \(\hat{\eta}^2_G = .123\)) and intercation between Matchness and Identity(\(F(1, 58) = 81.15\), \(\mathit{MSE} = 3,226.69\), \(p < .001\), \(\hat{\eta}^2_G = .087\))
 
-There was a main effect of Matchness (\(F(1, 58) = 79.85\), \(\mathit{MSE} = 4,817.48\), \(p < .001\), \(\hat{\eta}^2_G = .123\)) and intercation between Matchness and Identity(\(F(1, 58) = 81.15\), \(\mathit{MSE} = 3,226.69\), \(p < .001\), \(\hat{\eta}^2_G = .087\))
-
-We carried out two separate ANOVA for both matched and mismatched trials.
-
-For matched trials, we found the effect of identity \(F(1, 58) = 124.15\), \(\mathit{MSE} = 4,037.53\), \(p < .001\), \(\hat{\eta}^2_G = .257\), and the interaction between morality and identity,\(F(1.9, 110.18) = 4.41\), \(\mathit{MSE} = 465.91\), \(p = .016\), \(\hat{\eta}^2_G = .003\). However, there is no main effect of valence (\(F(1.98, 114.82) = 0.94\), \(\mathit{MSE} = 606.30\), \(p = .392\), \(\hat{\eta}^2_G = .001\)).
-
-\begin{table}[tbp]
-\begin{center}
-\begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-4}A really beautiful ANOVA table.}
-\begin{tabular}{lllllll}
-\toprule
-Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1^{GG}$} & \multicolumn{1}{c}{$\mathit{df}_2^{GG}$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
-\midrule
-Identity & 124.15 & 1 & 58 & 4,037.53 & < .001 & .257\\
-Valence & 0.94 & 1.98 & 114.82 & 606.30 & .392 & .001\\
-Identity $\times$ Valence & 4.41 & 1.9 & 110.18 & 465.91 & .016 & .003\\
-\bottomrule
-\addlinespace
-\end{tabular}
-\begin{tablenotes}[para]
-\normalsize{\textit{Note.} Note that the column names contain beautiful mathematical copy: This is because the table has variable labels.}
-\end{tablenotes}
-\end{threeparttable}
-\end{center}
-\end{table}
-
-We futher broke down the interaction by analyzing the data for self and other pairs separately. There was a significant effect of moral valence for self-stimuli, \(F(1.97, 114.32) = 6.29\), \(\mathit{MSE} = 367.25\), \(p = .003\), \(\hat{\eta}^2_G = .006\), BF10 = 11.16. Paired t tests showed that good-self condition (654 ± 67) were faster relative to bad-self condition (665 ± 64.6), \emph{t}(51) = -3.57, \emph{p} = 0.0022, Cohen's \emph{d} = -0.451 CI {[}-0.718 -0.182{]}, BF10 = 27.0, and over neutral-self condition (664 ± 64), \emph{t}(51) = -2.94, \emph{p} = 0.013, Cohen's \emph{d} = -0.362, 95\% CI {[}-0.624 -0.097{]}, BF10 = 4.63. The neutral-self and bad-self conditionsdid not differ, \emph{t}(51) = -0.44, \emph{p} = 0.89, Cohen's \emph{d} = 0.0499, CI {[}-0.305 0.206{]}, BF10 = 0.153 (see Figure 5).
-
-For the stranger condition, the results showed that there was no difference among these conditions, \(F(1.95, 112.89) = 0.35\), \(\mathit{MSE} = 699.50\), \(p = .699\), \(\hat{\eta}^2_G = .001\), BF10 = 0.077.
+We carried out two separate ANOVA for both matched and mismatched trials. The results showed that for matched trials, there was an interaction between valence and identity, \(F(1.9, 110.18) = 4.41\), \(\mathit{MSE} = 465.91\), \(p = .016\), \(\hat{\eta}^2_G = .003\). However, there is no main effect of valence (\(F(1.98, 114.82) = 0.94\), \(\mathit{MSE} = 606.30\), \(p = .392\), \(\hat{\eta}^2_G = .001\)). We futher broke down the interaction by analyzing the data for self and other pairs separately. There was a significant effect of moral valence for self-stimuli, \(F(1.97, 114.32) = 6.29\), \(\mathit{MSE} = 367.25\), \(p = .003\), \(\hat{\eta}^2_G = .006\), BF10 = 11.16. Paired \emph{t}-tests showed that good-self condition (654 ± 67) were faster relative to bad-self condition (665 ± 64.6), \emph{t}(58) = -3.47, \emph{p} = 0.0028, Cohen's \emph{d} = -0.451 CI {[}-0.718 -0.182{]}, BF10 = 27.0, and over neutral-self condition (664 ± 64), \emph{t}(58) = -2.78, \emph{p} = 0.013, Cohen's \emph{d} = -0.362, 95\% CI {[}-0.624 -0.097{]}, BF10 = 4.63. The neutral-self and bad-self conditionsdid not differ, \emph{t}(58) = -0.44, \emph{p} = 0.89, Cohen's \emph{d} = 0.0499, CI {[}-0.305 0.206{]}, BF10 = 0.153. For the stranger condition, the results showed that there was no difference among these conditions, \(F(1.95, 112.89) = 0.35\), \(\mathit{MSE} = 699.50\), \(p = .699\), \(\hat{\eta}^2_G = .001\), BF10 = 0.077.
 
 For non-matched trials, there was no significant effect. Morality (\(F(1, 58) = 0.16\), \(\mathit{MSE} = 1,547.37\), \(p = .692\), \(\hat{\eta}^2_G = .000\)), Identity(\(F(1.96, 113.52) = 0.68\), \(\mathit{MSE} = 390.26\), \(p = .508\), \(\hat{\eta}^2_G = .000\)), interaction (\(F(1.9, 110.27) = 0.04\), \(\mathit{MSE} = 585.80\), \(p = .953\), \(\hat{\eta}^2_G = .000\)).
 
